# solana_aggregator

./: .gitignore  Cargo.toml  README.md  diesel.toml
sol_account_collector/: Cargo.toml
sol_account_collector/src/: lib.rs
sol_aggregator/: Cargo.toml
sol_aggregator/src/: main.rs
sol_db/: Cargo.toml
sol_db/migrations/2024-07-12-125507_sol_db/: down.sql  up.sql
sol_db/src/: actions.rs  actions_account.rs  lib.rs  models.rs  schema.rs
sol_rest_api/: Cargo.toml
sol_rest_api/src/: routes.rs  server.rs
sol_tx_collector/: Cargo.toml
sol_tx_collector/src/: lib.rs  utils.rs
