[package]
name = "sol_tx_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
flume = { workspace = true }
chrono = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

sol_db = { path = "../sol_db" }
